# atool2

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  aclocal.m4  atool  atool.1  atool.1.in  atool.in  atool.spec.in  configure  configure.ac  meson.build
debian/: changelog  control  copyright  rules
extra/: README
m4/: ac_define_dir.m4
